<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleActivity2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/stdMargin"
    android:paddingRight="@dimen/stdMargin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActivityName2"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editTextSampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        tools:text="Sample Text"
        android:hint="SampleText"
        android:inputType="text"
        android:layout_marginBottom="@dimen/stdMargin"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="phone"
        android:hint="@string/Phone" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Number" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPassword"
        android:hint="@string/Pass" />

    <EditText
        android:id="@+id/editTextEMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textEmailAddress"
        android:hint="E-Mail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>

</LinearLayout>